Updated wallpaper and some filler text for about me

--- a/main.html
+++ b/main.html
@@ -19,7 +19,11 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  <h1 id="name-header">Michelle Huang</h1>
+  <img id="background-pic" src="img/wallpaper.jpg">
+  <div id="about-me">
+    <h1 id="name-header">Michelle Huang</h1>
+    I like to design and work on interesting problems
+  </div>
   <div id="img-container">
     <img class="img-circle" src="img/main-photo.jpg">
     <button class="circle-buttons" id="github" onclick="window.open('https://www.github.com/michellekhuang')">
