--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Michelle's personal website">
   <meta name="author" content="Michelle Huang">
 
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans|Julius+Sans+One">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Julius+Sans+One">
 
   <link rel="stylesheet" href="css/main.css">
 
